--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -19,8 +19,8 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
-	font: inherit;
+	/* font-size: 100%;*/
+	font: inherit; 
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -47,7 +47,3 @@ table {
 	border-spacing: 0;
 }
 
-img{
-	width: 100%;
-	height: 100%;
-}
